# AI-Tension-Detection

./: .gitignore  README.md
Capstone_Edge_Ingestion/: .gitignore  edge_pipeline.py  pyproject.toml
ai-detection-model/: .gitignore  README.md  edge_capture_windows.py  edge_pipeline.py  minimal_test_harness.py  pyproject.toml  slow_brain_worker.py
backend/: requirements.txt
backend/backend/: asgi.py  mock_alert.py  settings.py  urls.py
backend/users/: alert_service.py  apps.py  authentication.py  consumers.py  models.py  serializers.py  tests.py  urls.py  views.py  zmq_listener.py
backend/users/management/commands/: run_zmq_listener.py
backend/users/migrations/: 0001_initial.py  0002_delete_user.py  0003_initial.py  0004_alter_user_groups_alter_user_phone_and_more.py  0005_alter_user_options_alter_user_managers_and_more.py  0006_alter_user_table.py  0007_alter_user_table.py  0008_alter_user_table.py  0009_alter_user_table.py  0010_rename_role_user_ismanager.py  0011_rename_e_first_name_user_e_firstname_and_more.py  0012_alert.py
frontend/src/pages/: Manager.jsx
