[project]
name = "capstone-edge-ingestion"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13, < 3.14"
dependencies = [
    "fastapi>=0.135.1",
    "imagezmq>=1.2.0",
    "opencv-python>=4.13.0.92",
    "sounddevice>=0.5.5",
    "tensorflow>=2.20.0",
    "tensorflow-hub>=0.16.1",
    "uvicorn>=0.41.0",
]
