[project]
name = "edge_pipeline"
version = "0.1.0"
requires-python = ">=3.12, < 3.13"
dependencies = [
    "fastapi>=0.135.1",
    "imagezmq>=1.2.0",
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.92",
    "pyzmq>=27.1.0",
    "sounddevice>=0.5.5",
    "setuptools<82",
    "tensorflow[and-cuda]==2.20.*",
    "tensorflow-hub>=0.16.1",
    "uvicorn>=0.41.0",
    "psycopg2-binary>=2.9.11",
]
